--- a/projetoagenda/src/views/login-logado.ejs
+++ b/projetoagenda/src/views/login-logado.ejs
@@ -7,7 +7,7 @@
 
     <div class="col-lg-8 my-3">
       <h1 class="text-center">Olá <%= user.email %> </h1>
-      <p class="text-center lead">Você precisa sair para fazer outra conta.</p>
+      <p class="text-center lead text-muted">Você precisa sair para fazer outra conta.</p>
 
       <%- include('includes/messages') %>
 
