seçao 11: editando contato

--- a/projetoagenda/src/views/contato.ejs
+++ b/projetoagenda/src/views/contato.ejs
@@ -11,30 +11,34 @@
 
       <%- include('includes/messages') %>
 
+      <% if (contato._id) { %>
+      <form action="/contato/edit/<%= contato._id %>" method="POST">
+      <% } else { %>
       <form action="/contato/register" method="POST">
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        <div class="form-group">
-          <label for="inputNome">Nome</label>
-          <input type="text" value="<%= contato.nome %>" class="form-control" id="inputNome"
-            placeholder="Digite o nome do contato" name="nome">
-        </div>
-        <div class="form-group">
-          <label for="inputSobrenome">Sobrenome</label>
-          <input type="text" value="<%= contato.sobrenome %>" class="form-control" id="inputSobrenome"
-            placeholder="Digite o sobrenome do contato" name="sobrenome">
-        </div>
-        <div class="form-group">
-          <label for="inputEmail">E-mail</label>
-          <input type="email" value="<%= contato.email %>" class="form-control" id="inputEmail"
-            placeholder="Digite o e-mail do contato" name="email">
-        </div>
-        <div class="form-group">
-          <label for="inputTelefone">Telefone</label>
-          <input type="tel" value="<%= contato.telefone %>" class="form-control" id="inputTelefone"
-            placeholder="Digite o telefone do contato" name="telefone">
-        </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
-      </form>
+      <% } %>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+          <div class="form-group">
+            <label for="inputNome">Nome</label>
+            <input type="text" value="<%= contato.nome %>" class="form-control" id="inputNome"
+              placeholder="Digite o nome do contato" name="nome">
+          </div>
+          <div class="form-group">
+            <label for="inputSobrenome">Sobrenome</label>
+            <input type="text" value="<%= contato.sobrenome %>" class="form-control" id="inputSobrenome"
+              placeholder="Digite o sobrenome do contato" name="sobrenome">
+          </div>
+          <div class="form-group">
+            <label for="inputEmail">E-mail</label>
+            <input type="email" value="<%= contato.email %>" class="form-control" id="inputEmail"
+              placeholder="Digite o e-mail do contato" name="email">
+          </div>
+          <div class="form-group">
+            <label for="inputTelefone">Telefone</label>
+            <input type="tel" value="<%= contato.telefone %>" class="form-control" id="inputTelefone"
+              placeholder="Digite o telefone do contato" name="telefone">
+          </div>
+          <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
 
     </div>
 
