--- a/projetoagenda/src/views/includes/footer.ejs
+++ b/projetoagenda/src/views/includes/footer.ejs
@@ -6,7 +6,7 @@
   integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
   integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="./assets/js/bundle.js"></script>
+<script src="/assets/js/bundle.js"></script>
 </body>
 
 </html>
