--- a/projetoagenda/src/views/index.ejs
+++ b/projetoagenda/src/views/index.ejs
@@ -11,16 +11,24 @@
 
       <%- include('includes/messages') %>
 
+      <% if (contatos.length > 0) { %>
       <div class="responsive-table">
         <table class="table my-3">
+          <% contatos.forEach(contato => { %>
           <tr>
-            <td>Mateus</td>
-            <td>Oliveira</td>
-            <td>32133213267</td>
-            <td>mateus@gamil.com</td>
+            <td><%= contato.nome %></td>
+            <td><%= contato.sobrenome %></td>
+            <td><%= contato.telefone %></td>
+            <td><%= contato.email %></td>
+            <td><a href="/contato/index/<%= contato._id %> ">Editar</a></td>
+            <td><a class="text-danger" href="/contato/delete/<%= contato._id %> ">Excluir</a></td>
           </tr>
+          <% }); %>
         </table>
       </div>
+      <% } else { %>
+      <p class="text-center lead">Não existem contatos na sua agenda.</p>
+      <% } %>
 
     </div>
 
