--- a/projetoagenda/src/views/login.ejs
+++ b/projetoagenda/src/views/login.ejs
@@ -13,10 +13,10 @@
 
       <div class="row">
 
-        <div class="col-lg">
+        <div class="col-lg my-5">
           <h4>Faça seu cadastro</h4>
           <p class="text-muted">Se você ainda não tem conta, preencha o formulário abaixo:</p>
-          <form action="/login/register" method="POST">
+          <form class="form-cadastro" action="/login/register" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
               <label for="inputEmail1">Seu e-mail</label>
@@ -31,10 +31,10 @@
           </form>
         </div>
 
-        <div class="col-lg">
-          <h4>Entrar no sistema</h4>
+        <div class="col-lg my-5">
+          <h4>Faça seu login</h4>
           <p class="text-muted">Se você já tem conta, faça login abaixo:</p>
-          <form action="/login/login" method="POST">
+          <form class="form-login" action="/login/login" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
               <label for="inputEmail2">Seu e-mail</label>
