--- a/React_Basico/lista_tarefas/src/components/Main.css
+++ b/React_Basico/lista_tarefas/src/components/Main.css
@@ -35,3 +35,39 @@
   align-items: center;
   justify-content: center;
 }
+.tarefas {
+  margin-top: 30px;
+}
+
+.tarefas li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  transition: all 600ms;
+}
+
+.tarefas li:hover {
+  background: #51c5de;
+}
+
+.tarefas li .edit {
+  margin-right: 15px;
+  color: #51c5de;
+}
+
+.tarefas li .delete {
+  margin-right: 15px;
+  color: #f04c64;
+}
+
+.tarefas li:hover .delete,
+.tarefas li:hover .edit  {
+  color: #000;
+}
+
+.tarefas li .delete,
+.tarefas li .edit  {
+  cursor: pointer;
+  transition: all 600ms;
+}
